--- a/PROJECT/vercel.json
+++ b/PROJECT/vercel.json
@@ -20,7 +20,8 @@
 
         }
 
-    ],
+    ]
 
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
+
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
