--- a/PROJECT/vercel.json
+++ b/PROJECT/vercel.json
@@ -15,6 +15,7 @@
         {
 
             "src": "/(.*)",
+            "source": "/(.*)", "destination": "/",
 
             "dest": "PROJECT/wsgi.py"
 
@@ -23,5 +24,3 @@
     ]
 
 }
-
-{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
