--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ mccabe==0.7.0
 mypy==0.982
 mypy-extensions==0.4.3
 mysqlclient==2.1.1
+psycopg2-binary==2.9.9
 pycodestyle==2.9.1
 pyflakes==2.5.0
 sqlparse==0.4.3
